doc: swagger entry for /comments create,get,update,delete
